--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Emily Laflamme
+title: emily laflamme
 email: emily.laflamme@gmail.com
 description: Hello!
 baseurl: "" # the subpath of your site, e.g. /blog
