--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: emily laflamme
 email: emily.laflamme@gmail.com
-description: Cities for health. 
-Based in Chicago, IL
+description: Chicago, IL
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://emlaflamme.github.io" # the base hostname & protocol for your site
 twitter_username: emily_laflamme
